Update social profiles with actual links

--- a/index.html
+++ b/index.html
@@ -261,9 +261,9 @@
         // Social profiles only (no email). Replace placeholders.
         socialProfiles: [
           { key: "github", label: "GitHub", href: "https://github.com/svaza" },
-          { key: "linkedin", label: "LinkedIn", href: "https://www.linkedin.com/in/REPLACE_ME" },
-          { key: "strava", label: "Strava", href: "https://www.strava.com/athletes/REPLACE_ME" },
-          { key: "garmin", label: "Garmin", href: "https://connect.garmin.com/modern/profile/REPLACE_ME" },
+          { key: "linkedin", label: "LinkedIn", href: "https://www.linkedin.com/in/svaza" },
+          { key: "strava", label: "Strava", href: "https://www.strava.com/athletes/125856843" },
+          { key: "garmin", label: "Garmin", href: "https://connect.garmin.com/modern/profile/14bb93f1-baf2-443a-aac2-447969acbe8b" },
         ],
       },
 
